--- a/src/main/resources/web/testingPage.html
+++ b/src/main/resources/web/testingPage.html
@@ -1,3 +1,62 @@
+<!--<!DOCTYPE HTML>-->
+<!--<html lang="en">-->
+<!--<head>-->
+    <!--<meta charset="utf-8">-->
+    <!--<title>Demo: Layout with Dijit</title>-->
+    <!--<link rel="stylesheet" href="Demo.css" media="screen">-->
+    <!--<link rel="stylesheet" href="Style.css" media="screen">-->
+    <!--<link rel="stylesheet" href="Claro.css" media="screen">-->
+<!--</head>-->
+<!--<body class="claro">-->
+<!--<div id="appLayout" class="demoLayout" data-dojo-type="dijit/layout/BorderContainer" data-dojo-props="design: 'headline'">-->
+    <!--<div class="centerPanel" data-dojo-type="dijit/layout/TabContainer" data-dojo-props="region: 'center', tabPosition: 'bottom'">-->
+        <!--<div data-dojo-type="dijit/layout/ContentPane" title="Group 1">-->
+            <!--<h4>Group 1 Content</h4>-->
+            <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et-->
+                <!--dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex-->
+                <!--ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat-->
+                <!--nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit-->
+                <!--anim id est laborum.</p>-->
+        <!--</div>-->
+        <!--<div data-dojo-type="dijit/layout/ContentPane" title="Group Two">-->
+            <!--<h4>Group 2 Content</h4>-->
+        <!--</div>-->
+        <!--<div data-dojo-type="dijit/layout/ContentPane" title="Long Tab Label for this One">-->
+            <!--<h4>Group 3 Content</h4>-->
+        <!--</div>-->
+    <!--</div>-->
+    <!--<div class="edgePanel" data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region: 'top'">Header content (top)</div>-->
+    <!--<div id="leftCol" class="edgePanel" data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region: 'left', splitter: true">Sidebar content (left)</div>-->
+<!--</div>-->
+<!--&lt;!&ndash; load dojo &ndash;&gt;-->
+<!--&lt;!&ndash;<script src="//ajax.googleapis.com/ajax/libs/dojo/1.10.4/dojo/dojo.js"></script>&ndash;&gt;-->
+<!--&lt;!&ndash;<script>&ndash;&gt;-->
+    <!--&lt;!&ndash;require(["dojo/parser", "dijit/layout/BorderContainer", "dijit/layout/TabContainer", "dijit/layout/ContentPane", "dojo/domReady!"], function(parser){&ndash;&gt;-->
+        <!--&lt;!&ndash;parser.parse();&ndash;&gt;-->
+    <!--&lt;!&ndash;});&ndash;&gt;-->
+<!--&lt;!&ndash;</script>&ndash;&gt;-->
+
+<!--<script src="//ajax.googleapis.com/ajax/libs/dojo/1.10.4/dojo/dojo.js"-->
+        <!--data-dojo-config="async:true, parseOnLoad:true">-->
+<!--</script>-->
+<!--<script>-->
+    <!--require(["dojo/parser", "dijit/layout/BorderContainer", "dijit/layout/TabContainer",-->
+        <!--"dijit/layout/ContentPane"]);-->
+<!--</script>-->
+
+
+<!--<div id="loadingOverlay" class="loadingOverlay pageOverlay">-->
+    <!--<div class="loadingMessage">Loading...</div>-->
+<!--</div>-->
+
+<!--<h1>Demo: Loading Overlay</h1>-->
+<!--<p>The rest of your page...</p>-->
+
+<!--</body>-->
+<!--</html>-->
+
+
+
 <!DOCTYPE html>
 <html >
 <head>
