Deploy 15.12.16 Current changes: Project was reconstructed. Fix: Creation .war file for deploying on Glassfish server Fix: Hardcode Added: CDI beans injections

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -4,18 +4,10 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
-<head>
-    <title></title>
-</head>
-<body>
+<h:head>
+    <title>Document Management</title>
+</h:head>
 <h:body>
-    Hello from Facelets 1
-    <br/>
-    Message is: #{messageServerBean.message}
-    <br/>
-    Message Server Bean is: #{messageServerBean}
-    <br/>
-
+    <h2>Testing page</h2>
 </h:body>
-</body>
 </html>
